# MCP-HUB

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_CN.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUALITY_AUDIT_PLAN.md  README.md  README_CN.md  REFACTOR_PLAN.md  SECURITY.md  SECURITY_CN.md  SUPPORT.md  SUPPORT_CN.md  api.py  comprehensive_mcp_projects.json  docker-compose.yml  docker-entrypoint.sh  index.html  main.py  manifest.webmanifest  market-config.json  notable_projects.json  package.json  pyproject.toml  pytest.ini  query.py  requirements.txt  (+3 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_CN.md  branch-protection-main.json  dependabot.yml  labeler.yml  labels.md  labels.yml  release-drafter.yml  repo-settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_CN.md  config.yml  feature_request.md  feature_request_CN.md  question.md  question_CN.md  security_report.md  security_report_CN.md  server_submission.md  server_submission_CN.md
.github/scripts/: setup-branch-protection.sh  setup-github.sh  setup-repo-security.sh  setup-security-advisories.sh
.github/workflows/: ci.yml  dependabot-merge.yml  deploy-pages.yml  frontend-deploy.yml  labeler.yml  lint.yml  release.yml  sync-data.yml  sync.yml
assets/: About-lVvuyKKg.js  About-lVvuyKKg.js.map  Badge-iTRwvQSF.js  Badge-iTRwvQSF.js.map  BatchExportBar-Bcx-yvrb.js  BatchExportBar-Bcx-yvrb.js.map  Button-CsmkYF9A.js  Button-CsmkYF9A.js.map  Card-CWDseJEx.js  Card-CWDseJEx.js.map  Categories-OGhPe3h4.js  Categories-OGhPe3h4.js.map  Companies-D7cLv1e4.js  Companies-D7cLv1e4.js.map  Curated-DwIHcZcl.js  Curated-DwIHcZcl.js.map  Favorites-Dmd2Y18s.js  Favorites-Dmd2Y18s.js.map  Home-BKxUJ3AX.js  Home-BKxUJ3AX.js.map  NotFound-DMG1WQFw.js  NotFound-DMG1WQFw.js.map  QualityBadge-DTtd3xYz.js  QualityBadge-DTtd3xYz.js.map  ServerCard-BsZBCynC.js  ServerCard-BsZBCynC.js.map  ServerDetail-5xSi13ZG.js  ServerDetail-5xSi13ZG.js.map  ServerGrid-sHc6aXfu.js  ServerGrid-sHc6aXfu.js.map  ServerList-DlksgoZg.js  ServerList-DlksgoZg.js.map  SubmitServer-Be4GTye8.js  SubmitServer-Be4GTye8.js.map  arrow-left-DMzodfQZ.js  arrow-left-DMzodfQZ.js.map  chevron-right-Cx4gOqEd.js  chevron-right-Cx4gOqEd.js.map  circle-alert-Cd2p1v-Z.js  circle-alert-Cd2p1v-Z.js.map  (+21 more)
core/: __init__.py  _version.py
docs/: API.md  API_CN.md  ARCHITECTURE.md  BENCHMARKS.md  DEVELOPMENT.md  QUICKSTART.md  QUICKSTART_CN.md  SECURITY-MODEL.md  USER_GUIDE.md  USER_GUIDE_CN.md
docs/internal/: AGENT_GUIDE.md  AGENT_GUIDE_CN.md  COMPLETENESS_SCORING_GUIDE.md  DOMESTIC_COMPANIES_REPORT.md  FULL_SYSTEM_GUIDE.md  IMPROVEMENT_PLAN.md  NOTABLE_PROJECTS_GUIDE.md  PROJECT_STRUCTURE_GUIDE.md  README.md  REPOSITORY_INTRO.md  SERVER_CATALOG.md
examples/: README.md  README_CN.md  claude-config.json
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: 404.html  robots.txt  sitemap.xml  sw.js
frontend/public/static-data/: curated.json  index.json  servers.json  stats.json
frontend/scripts/: add-dark-mode.ts  cross-browser-audit.ts  dark-contrast-audit.ts  generate-pwa-icons.ts  prod-audit.ts  visual-audit.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/hooks/: useComments.ts  useDebounced.ts  useExport.ts  useFavorites.ts  useRatings.ts  useServerDetail.ts  useServers.ts  useStats.ts  useSubmissions.ts  useTheme.ts
frontend/src/lib/: api.ts  download.ts  markdown.ts  quality.ts  queryClient.ts  scoring.ts  universalConfig.ts  userStore.ts
frontend/src/pages/: About.tsx  Browse.tsx  Categories.tsx  Companies.tsx  Curated.tsx  Favorites.tsx  Home.tsx  More.tsx  NotFound.tsx  OurTools.tsx  ServerDetail.tsx  ServerList.tsx  SubmitServer.tsx
static-data/: categories.json  companies.json  featured-configs.json  index.json  recent.json  stats.json
static-data/config/: CowAgent.json  FastGPT.json  JavaGuide.json  LibreChat.json  PDFMathTranslate.json  agents.json  ai-engineering-hub.json  awesome-claude-skills.json  awesome-mcp-servers.json  cc-switch.json  chatgpt-on-wechat.json  claude-plugins-official.json  github-mcp-server.json  gpt-researcher.json  kong.json  lobehub.json  mempalace.json  minds-platform.json  repomix.json  servers.json
templates/: 1Panel.json  AstrBot.json  CowAgent.json  ECC.json  FastGPT.json  JavaGuide.json  JeecgBoot.json  LibreChat.json  LocalAI.json  PDFMathTranslate.json  Scrapling.json  TrendRadar.json  UI-TARS-desktop.json  agents.json  agentscope.json  ai-engineering-hub.json  antigravity-awesome-skills.json  anything-llm.json  awesome-claude-skills.json  awesome-mcp-servers.json  cc-switch.json  chatgpt-on-wechat.json  cherry-studio.json  chrome-devtools-mcp.json  claude-plugins-official.json  composio.json  context7.json  dify.json  everything-claude-code.json  gemini-cli.json  github-mcp-server.json  goose.json  gpt-researcher.json  kong.json  kratos.json  lobe-chat.json  lobehub.json  mempalace.json  minds-platform.json  mindsdb.json  (+10 more)
tests/: __init__.py  conftest.py  test_api.py  test_config_builder.py  test_core.py  test_downloader.py  test_export.py  test_fastapi.py  test_install_hint.py  test_our_signal.py  test_query.py  test_scoring.py  test_secret_scanner.py  test_user_functions.py
tools/: _install_hint.py  _our_signal.py  auto_updater.py  batch_manager.py  bench.py  build_social_preview.py  collect_domestic_companies.py  completeness_scoring.py  comprehensive_collector.py  download_manager.py  downloader.py  gen_api_docs.py  gen_static_data.py  index_downloader.py  index_servers.py  notable_projects_navigator.py  pre-commit  rebrand_to_mcp_hub.py  secret_scanner.py  server_health_checker.py  sync_index.py  update_index.py
(+80 files in other folders)
