[project]
name = "mcp-hub"
version = "2.0.1"
description = "The Universal MCP Hub - Browse, Search, and Download Model Context Protocol Server Configurations for Claude, Cursor, ChatGPT, and More"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "badhope"},
]
keywords = ["mcp", "model-context-protocol", "ai", "marketplace", "claude", "cursor"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: FastAPI",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "httpx>=0.24.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
]
dev = [
  "mypy",
  "black",
  "flake8",
  "isort",
  "pytest",
]

[project.scripts]
mcp-hub = "main:cli"
mcp-hub-server = "main:cli"
mcp-market = "main:cli"

[project.urls]
Homepage = "https://github.com/badhope/MCP-HUB"
Repository = "https://github.com/badhope/MCP-HUB"
Documentation = "https://github.com/badhope/MCP-HUB#-documentation"
Issues = "https://github.com/badhope/MCP-HUB/issues"
Changelog = "https://github.com/badhope/MCP-HUB/blob/main/CHANGELOG.md"
"Buy Me a Coffee" = "https://buymeacoffee.com/badhope"

[tool.setuptools]
packages = ["core"]

[tool.setuptools.package-data]
core = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Pre-existing tech debt: many helpers use `json.load()` and Pydantic v2 model
# `.model_dump()` returns Any. Don't fail CI on these — track them separately.
disable_error_code = [
  "no-any-return",
  "var-annotated",
]
follow_imports = "silent"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
# isort 8.x renamed `line-length` → `line_length`; the hyphenated form
# now raises UnsupportedSettings on import. Use the new key.
line_length = 100
